<resources>
    <string name="app_name">TestQuick</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_email">Email</string>
    <string name="text_login">Entrar</string>
    <string name="text_register">¿No tienes una cuenta? - Registrate aquí</string>
    <string name="hint_password">Password</string>
    <string name="text_empty_fields">Los campos son obligatorios</string>
    <string name="error_general_login">Autenticación Fallida</string>
    <string name="error_user_not_found">El usuario no se encuentra registrado</string>
    <string name="error_user_disabled">El usuario se encuentra deshabilitado</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="settings">Ajustes</string>
    <string name="error_password">Contraseña incorrecta</string>
    <string name="text_create_account">Crear Cuenta</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="text_update">Actualizar</string>
    <string name="text_save">Guardar</string>
    <string name="error_general_register">Hubo un error, intente más tarde</string>
    <string name="text_empty_photo">Debes agregar una foto dando click en el icono superior</string>
    <string name="create_account_success">Cuenta creada exitosamente</string>
    <string name="text_ok">Aceptar</string>
    <string name="error_password_invalid">La contraseña debe tener mínimo 6 carácteres</string>
    <string name="error_user_exist">El email ingresado ya se encuentra registrado</string>
    <string name="hint_search_user">Nombre usuario</string>
    <string name="hint_write_message">Escribe tu mensaje</string>
    <string name="fab_content_desc">Enviar mensaje</string>
    <string name="error_download_urlimage">Se obtuvo un error al descargar la url de la imagen</string>
    <string name="text_send_private_chat">¿Desea enviar un mensaje privado al usuario %1$s?</string>
    <string name="text_yes">SI</string>
    <string name="text_not_results_search_user">No se encontró información para la búsqueda ingresada</string>
    <string name="text_not_chats">Aún no inicia chats con otros usuarios</string>
    <string name="text_cancel">Cancelar</string>
    <string name="error_email">Formato de correo invalido</string>
    <string name="text_update_success">Usuario actualizado con éxito</string>
    <string name="no_connected_internet">No está conectado a internet</string>
</resources>