<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_normal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfileSettings"
            android:layout_width="@dimen/size_image_profile"
            android:layout_height="@dimen/size_image_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_top"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_person"
            app:civ_border_color="@color/borderColor"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileSettings"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_label_register"
                android:background="@drawable/shape_btn_login"
                android:text="@string/text_update"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_btn_logout"
                android:text="@string/text_logout"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarUpdate"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</FrameLayout>