<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.CreateAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreateAccount"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyThemeOverlay_Toolbar"
            app:contentInsetStartWithNavigation="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_normal"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfileRegister"
            android:layout_width="@dimen/size_image_profile"
            android:layout_height="@dimen/size_image_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_top"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_person"
            app:civ_border_color="@color/borderColor"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileRegister"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputNameRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input_register"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:hint="@string/hint_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputedtLastNameRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input_register"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:hint="@string/hint_lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputedtEmailRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input_register"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:hint="@string/hint_email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputedtPasswordRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input_register"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:hint="@string/hint_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_top_label_register"
            android:layout_marginBottom="@dimen/margin_top_label_register"
            android:background="@drawable/shape_btn_login"
            android:text="@string/text_save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>